--- a/public/style.css
+++ b/public/style.css
@@ -106,7 +106,7 @@ div.header-nav {
   fill: #4155ac;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 750px) {
   div.header-nav {
     flex-direction: column;
   }
@@ -114,7 +114,7 @@ div.header-nav {
     padding-bottom: 0.5rem;
   }
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   .navigation-container {
     flex-direction: column;
     background-color: #f2f6f7;
@@ -316,6 +316,13 @@ p.brand {
 span.bold {
   font-weight: 500;
   color: #4155ac;
+}
+/* Cuts off too long displat names */
+.display-name {
+  max-width: 120px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 p.loader {
   text-align: center;
